# chang-store

./: .ckignore  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  App.tsx  CLAUDE.md  CODESEEKER.md  GEMINI.md  MCP.md  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  entities.json  eslint.config.js  fix.py  fix2.py  fix3.py  index.html  mempalace.yaml  metadata.json  opencode.jsonc  package-lock.json  package.json  postcss.config.js  progress.txt  repomix-output.xml  test-results.json  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.vitest.json  types.ts  vite.config.ts  vitest.config.ts
.beads/: config.yaml  interactions.jsonl  issues.jsonl  last-touched
.ck/: AGENTS.md.ck  ARCHITECTURE.md.ck  App.tsx.ck  CLAUDE.md.ck  CODEBASE.md.ck  README.md.ck  Spinner.tsx.ck  WARP.md.ck  bun.lock.ck  eslint.config.js.ck  index.html.ck  index.tsx.ck  just_err.txt.ck  just_out.txt.ck  manifest.json  metadata.json.ck  package-lock.json.ck  package.json.ck  postcss.config.js.ck  setupTests.ts.ck  stderr2.txt.ck  stderr_only.txt.ck  stderr_test.txt.ck  stdout2.txt.ck  stdout_only.txt.ck  stdout_test.txt.ck  test-results.json.ck  test_err.txt.ck  test_out.txt.ck  test_output.txt.ck  tsconfig.json.ck  tsconfig.tsbuildinfo.ck  tsconfig.vitest.json.ck  types.ts.ck  vercel.json.ck  vite.config.ts.ck  vitest.config.ts.ck
.claude/: settings.local.json
.codeseeker/: coding-standards.json  project.json
.jules/: bolt.md
src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
text/: plain
(+827 files in other folders)
